[package]
name = "reading_time_estimator"
version = "0.1.0"
authors = ["Matheus Dias Vieira <matheuspvh13@gmail.com>"]
edition = "2018"
description = "Package to estimate the reading time from a text. Medium's like."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
documentation = "..."
homepage = "..."
repository = "..."
[dependencies]
