[package]
name = "reading_time_estimator"
version = "0.1.0"
authors = ["Matheus Dias Vieira <matheuspvh13@gmail.com>"]
edition = "2018"
description = "Package to estimate the reading time from a text. Medium's like."

documentation = "https://github.com/Koalapvh13/reading_time_estimator"
homepage = "https://github.com/Koalapvh13/reading_time_estimator#readme"
repository = "https://github.com/Koalapvh13/reading_time_estimator"
keywords = ["reading-estimator", "medium"]

categories = ["time", "webdev"]

license = "MIT"
[dependencies]
